--- a/config/app_config.yaml
+++ b/config/app_config.yaml
@@ -1,15 +1,13 @@
-# Application configuration
 app:
   title: "Databricks Chat App"
-  default_tenant_id: "default"
-  default_llm_route: ${env:APP_DEFAULT_LLM_ROUTE, "chat-dbrx"}
-  default_embed_route: ${env:APP_DEFAULT_EMBED_ROUTE, "embed-bge"}
   catalog: ${env:APP_CATALOG, "app_catalog"}
   schema: ${env:APP_SCHEMA, "app"}
   volume: ${env:APP_VOLUME, "user_files"}
+  # Controls which models appear in the UI picker.
+  # If empty or omitted, the UI falls back to models in model_catalog.yaml with allowed: true
+  allowed_model_ids: ["sonnet-4"]
   # Feature toggles
   features:
-    enable_rag: true
+    enable_rag: false
     enable_sql_tool: false
     enable_budgets: true
-    allow_model_override: true
