--- a/apps/streamlit_app/config/app_config.yaml
+++ b/apps/streamlit_app/config/app_config.yaml
@@ -1,6 +1,6 @@
 app:
   title: "Databricks Chat App"
-  catalog: ${env:APP_CATALOG, "shared"}
+  catalog: ${env:APP_CATALOG, "app_catalog"}
   schema: ${env:APP_SCHEMA, "app"}
   volume: ${env:APP_VOLUME, "user_files"}
   allowed_model_ids: ["sonnet-4"]
